--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Rock, Paper, Scissors</h1>
+    <p>Use the console to play the game.</p>
   <script src="script.js"></script>
 </body>
 </html>
